# TinyTIFF-Cxx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  tiff_cxx.cpp  tiff_cxx.h
test/: CMakeLists.txt  tiff_cxx_test.cpp
